# smart-process-manager-crossOS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
implementation/include/: Formatter.h  Logger.h
implementation/src/: WindowManager.cpp  main.cpp
include/: ProcessControl.h  ProcessMonitor.h  SystemMetrics.h
src/: ProcessControl.cpp  ProcessMonitor.cpp  SystemMetrics.cpp  main.cpp
